--- a/starter_code/pom.xml
+++ b/starter_code/pom.xml
@@ -79,6 +79,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
